apps/sistemax-front/k8s/sistemax-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sistemax-service-master
  namespace: sistemax
spec:
  selector:
    app: sistemax-master
  type: NodePort
  ports:
  - name: front
    port: 80
