apps/sistemax-front/k8s/sistemax-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sistemax-ingress-master
  namespace: sistemax
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: 'ca-local-issuer'
    nginx.org/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - sistemax.vagrant.test
        - sistemax.local.test
      secretName: tls-localhost-dev
  rules:
    - host: sistemax.vagrant.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sistemax-service-master
                port:
                  number: 80
    - host: sistemax.local.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sistemax-service-master
                port:
                  number: 80
